# DigitalTwin

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  rag_client.py  rag_service.py  requirements.txt  start_assistant.py  test_csv_final.py
.claude/: settings.local.json
chroma_db/: chroma.sqlite3  personas.json
chroma_db/0c5a2385-fdd9-4479-9493-5b6dd73b469f/: index_metadata.pickle
csv/: daiyu_full_sessions.csv  lccc_chat1.csv  lccc_chat2.csv  zhenhuan_chat.csv
data/csv/: test.csv
doc/: 数据模型说明.md  设计文档.docx
docs/: MIGRATION.md  api.md  architecture.md
docs/superpowers/plans/: 2026-03-18-rag-refactor.md
front/: index.html  script.js  styles.css
frontend/: script.js  styles.css  tutor.html
monitoring/: loki-config.yml  prometheus.yml
scripts/: import_course_materials.sh  start_monitoring.sh  start_server.sh  stop_monitoring.sh
src/: __init__.py  app.py  export_pdf_assets.py  import_course_materials.py  import_pdf.py  import_textbook.py  import_wechat_csv.py  rebuild_multimodal_pdf_index.py  run_server.py  test_csv_final.py  test_retrieval.py
src/agent/: react_agent.py  tutor_react_agent.py
src/api/: app.py  config.py
src/core/: rag_service.py  self_rag.py  textbook_rag_service.py
src/front/: example.html  index.html  script.js  styles.css  tutor.html
src/infrastructure/: __init__.py  db_client.py  document.py  llm_client.py  multimodal_embedding_client.py  persona_manager.py  telemetry.py  text_embedding_client.py
src/loaders/: __init__.py  base.py  csv_loader.py  pdf_loader.py
src/models/: __init__.py  chat_record_model.py
src/rag/: __init__.py  query_processor.py  rag_engine.py  self_rag.py
src/services/: __init__.py  import_service.py  multimodal_pdf_service.py  rag_service.py  textbook_rag_service.py
src/utils/: csv_loader.py  doc_loader.py
tests/: integration_tests.py  test_csv_loader.py  test_db_client.py  test_llm_client.py  test_loaders_base.py  test_multimodal_embedding_client.py  test_multimodal_pdf_service.py  test_pdf_export.py  test_pdf_loader.py  test_query_processor.py  test_rag_engine.py  test_rag_service.py  test_telemetry.py  test_text_embedding_client.py  test_wechat_import.py
textbook/LabReport/: lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx
(+22 files in other folders)
