[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitaltwin-refactor"
version = "0.1.0"
description = "Refactored DigitalTwin RAG with unified architecture"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "langchain>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.1.0",
    "chromadb>=0.4.0",
    "dashscope>=1.10.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
digitaltwin-server = "src.run_server:main"
digitaltwin-import = "src.skills.wechat_csv_import.scripts.import_wechat_csv_cli:main"
digitaltwin-export-pdf = "src.skills.pdf_assets_export.scripts.export_pdf_assets_cli:main"
digitaltwin-rebuild-mm-pdf = "src.skills.multimodal_pdf_rebuild.scripts.rebuild_multimodal_pdf_index_cli:main"
digitaltwin-import-course-materials = "src.skills.course_material_import.scripts.import_course_materials_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
